force-app/main/default/objects/Retainer__c/Retainer__c.object-meta.xml
<CustomObject>
    <label>Retainer</label>
    <nameField>
        <displayFormat>RET-{YYYY}-{00000}</displayFormat>
        <label>Retainer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>