force-app/main/default/objects/Retainer__c/fields/Attorney_Signed__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney Signed</label>
    <type>Checkbox</type>
</CustomField>