force-app/main/default/objects/Retainer__c/fields/Attorney_Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Signed_At__c</fullName>
    <label>Attorney Signed At</label>
    <type>DateTime</type>
</CustomField>