force-app/main/default/objects/Retainer__c/fields/Contingency_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Percent__c</fullName>
    <label>Contingency Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>