force-app/main/default/objects/Retainer__c/fields/Days_Since_Sent__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Sent__c</fullName>
    <formula>IF(NOT(ISNULL(Sent_At__c)), TODAY()-DATEVALUE(Sent_At__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>