force-app/main/default/objects/Retainer__c/fields/Declined_At__c.field-meta.xml
<CustomField>
    <fullName>Declined_At__c</fullName>
    <label>Declined At</label>
    <type>DateTime</type>
</CustomField>