force-app/main/default/objects/Retainer__c/fields/Document_Hash__c.field-meta.xml
<CustomField>
    <fullName>Document_Hash__c</fullName>
    <label>Document Hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>