force-app/main/default/objects/Retainer__c/fields/E_Sign_Provider__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Provider__c</fullName>
    <label>E-Sign Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>HelloSign</fullName>
            </value>
            <value>
                <fullName>Adobe Sign</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PandaDoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>