force-app/main/default/objects/Retainer__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>AND(
    NOT(ISPICKVAL(Status__c, &quot;SIGNED&quot;)),
    NOT(ISBLANK(Sent_At__c)),
    DATEVALUE(Sent_At__c) + 7 &lt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>