force-app/main/default/objects/Retainer__c/fields/Fully_Executed__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed__c</fullName>
    <formula>(Client_Signed__c &amp;&amp; Attorney_Signed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Executed</label>
    <type>Checkbox</type>
</CustomField>