force-app/main/default/objects/Retainer__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <type>Lookup</type>
</CustomField>