force-app/main/default/objects/Retainer__c/fields/Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent__c</fullName>
    <label>Last Reminder Sent</label>
    <type>DateTime</type>
</CustomField>