force-app/main/default/objects/Retainer__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <type>Lookup</type>
</CustomField>