force-app/main/default/objects/Retainer__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <label>Reminder Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>