force-app/main/default/objects/Retainer__c/fields/Signer_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Signer_IP_Address__c</fullName>
    <label>Signer IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>