force-app/main/default/objects/Retainer__c/fields/Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Template_Used__c</fullName>
    <label>Template Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>